--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -543,7 +543,7 @@
             <p>Join AI Quiz Hub and start learning today</p>
           </div>
 
-          <form method="post" enctype="multipart/form-data">
+          <form method="post" action="{% url 'accounts:register' %}" enctype="multipart/form-data">
             {% csrf_token %}
 
             <div class="form-row">
