Added Explanation Rules fixed some bugs

--- a/quizzes/templates/quizzes/generating_quiz.html
+++ b/quizzes/templates/quizzes/generating_quiz.html
@@ -175,6 +175,8 @@
                     <div id="gen-progress" class="progress-fill"></div>
                 </div>
             </div>
+            <p id="gen-status" class="progress-text">Generating questions</p>
+
         </div>
     </div>
     
